--- a/css/stylePerfil.css
+++ b/css/stylePerfil.css
@@ -77,7 +77,7 @@ p {
 
 .tarjeta {
     margin-top: 20px;
-    margin-bottom: 10%;
+    margin-bottom: 40px;
     width: 90%;
     background-color: white;
     border-radius: 10px;
