--- a/css/TicketAuditory.css
+++ b/css/TicketAuditory.css
@@ -71,7 +71,7 @@ main {
   z-index: 1;
   max-width: 3000px;        /* o el ancho que prefieras */
   margin: 0 auto;          /* centra horizontalmente */
-  width: 99%;              /* ocupa el 90% en móviles */
+  width: 100%;              /* ocupa el 90% en móviles */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* para que parezca una tarjeta */
   
  
@@ -163,6 +163,25 @@ hr.dashed {
   font-family: "Montserrat", sans-serif;
   margin-top: 20px;
   margin-bottom: 10px;
+}
+
+.menu {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    max-width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-top: 1px solid #929292;
+    padding: 0.5rem 0;
+    z-index: 1000;
+    background-color: #FBF6F6;
+}
+
+.menu a {
+    font-size: 1.5rem;
 }
 
 
