--- a/css/styleCalendario.css
+++ b/css/styleCalendario.css
@@ -1,4 +1,3 @@
-
 * {
     font-family: "Montserrat";
 }
@@ -10,6 +9,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh; 
 }
 
 h1 {
@@ -24,13 +24,16 @@ h3 {
 
 .encabezado {
     padding-top: 10%;
+    width: 100%;
+    position: relative;
 }
 
 .flecha {
     width: 24px;
     position: absolute;
     left: 5%;
-    top: 6%;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 #prev,
@@ -45,6 +48,7 @@ h3 {
     border: 1px solid #ccc;
     border-radius: 8px;
     width: 90%;
+    overflow-x: auto; 
 }
 
 .cal-header {
@@ -54,16 +58,21 @@ h3 {
     align-items: center;
     margin-bottom: 1rem;
     width: 90%;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .cal-days,
 .cal-dates {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
+    width: 100%; 
+    box-sizing: border-box; 
 }
 
 .cal-days div {
     font-weight: 500;
+    padding: 5px 0;
 }
 
 .cal-dates div {
@@ -76,7 +85,8 @@ h3 {
     font-size: 14px;
     color: black;
     background: transparent;
-    margin: 5px;
+    margin: 2px;
+    box-sizing: border-box;
 }
 
 .cal-dates div.has-ticket {
@@ -90,6 +100,7 @@ h3 {
 #ticket-info {
     margin-top: 20px;
     text-align: left;
+    width: 90%;
 }
 
 .cal-days {
@@ -99,15 +110,15 @@ h3 {
     border-top-right-radius: 7px;
     border-top-left-radius: 7px;
     margin-bottom: 5px;
+    color: black;
 }
 
 .cal-dates {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     min-height: 350px;
     justify-items: center;
     align-items: center;
+    padding: 5px;
 }
 
 .mes {
@@ -225,21 +236,57 @@ h3 {
     margin-bottom: 3rem;
 }
 
-@media (width <=440px) {
+@media (max-width: 440px) {
     .dropdown {
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
+
+    .select {
+        margin-left: 0;
+        margin-top: 10px;
+    }
+
+    .cal-dates div {
+        width: 35px;
+        height: 35px;
+        font-size: 13px;
+    }
+
+    .cal-container {
+        width: 95%;
+    }
+
+    .tarjeta {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 10px;
+    }
+
+    .fecha, .info, .iconos {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .descripcion {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .prioridad {
+        margin-top: 5px;
+    }
 }
 
-@media (width > 750px) {
+@media (min-width: 750px) {
     .encabezado {
         padding-top: 7%;
     }
 }
 
-@media (width > 1000px) {
+@media (min-width: 1000px) {
     img {
         max-height: 70%;
     }
@@ -271,6 +318,10 @@ h3 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.ticket-title {
+    text-align: left;
 }
 
 .fecha {
@@ -307,6 +358,10 @@ h3 {
 
 .ticket-status p {
     margin: 0;
+}
+
+.ticket-status {
+    text-align: left;
 }
 
 .prioridad p {
@@ -356,16 +411,19 @@ h3 {
     display: inline-block;
     border: 1px solid #F48C06;
     background-color: #F9B48B;
+    text-align: left;
 }
 
 .status-esperando-respuesta {
     padding: 0.2em 0.8em;
     border-radius: 999px;
-    font-size: 0.2rem;
+    font-size: 0.9rem;
     font-weight: 500;
     display: inline-block;
     border: 1px solid #FFBA08;
     background-color: #FFE297;
+    
+    text-align: left;
 }
 
 .status-cerrado {
@@ -376,16 +434,7 @@ h3 {
     display: inline-block;
     border: 1px solid #578F47;
     background-color: #9AE086;
-}
-
-.status-abierto {
-    padding: 0.2em 0.8em;
-    border-radius: 999px;
-    font-size: 0.9rem;
-    font-weight: 500;
-    display: inline-block;
-    border: 1px solid #96FF50;
-    background-color: #D6FFC5;
+    text-align: left;
 }
 
 .priority-baja {
@@ -400,5 +449,10 @@ h3 {
 
 .priority-alta {
     color: #DC2F02;
+    font-weight: bold;
+}
+
+.priority-critica {
+    color: #A00000;
     font-weight: bold;
 }
