--- a/css/crearTicket.css
+++ b/css/crearTicket.css
@@ -183,6 +183,10 @@ textarea.form-control::placeholder {
     background-color: #FBF6F6;
 }
 
+.menu img {
+    height: 18px;
+}
+
 .menu a {
     font-size: 1.5rem;
 }
