--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -263,6 +263,12 @@ body {
     padding: 0.5rem 0;
     z-index: 1000;
     background-color: #FBF6F6;
+    height: 46.5px;
+}
+
+.menu img {
+    height: 18px;
+    margin-bottom: 10px;
 }
 
 .menu a {
