--- a/css/ticketsDashboard.css
+++ b/css/ticketsDashboard.css
@@ -401,6 +401,12 @@ hr.dashed {
     padding: 0.5rem 0;
     z-index: 1000;
     background-color: #FBF6F6;
+    height: 46.5px;
+}
+
+.menu img {
+    height: 18px;
+    margin-bottom: 8px;
 }
 
 .menu a {
